# mesos

./: CMakeLists.txt
cmake/: CompilationConfigure.cmake  DependencyConfigure.cmake  MesosConfigure.cmake  ProtobufConfigure.cmake
src/: CMakeLists.txt
src/cmake/: MesosProtobuf.cmake
src/slave/: state.cpp  state.hpp
src/slave/cmake/: AgentConfigure.cmake
support/: mesos-style.py
